--- a/FAQ.html
+++ b/FAQ.html
@@ -1,4 +1,3 @@
-<!-- FAQ.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,23 +6,120 @@
     <title>FAQ - BeetBOOST</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <style>
+        :root {
+            --primary-burgundy: #8B1538;
+            --vibrant-magenta: #C41E3A;
+            --soft-rose: #E8B4CB;
+            --earthy-cream: #F5F2E8;
+            --pure-white: #FFFFFF;
+            --text-dark: #2C2C2C;
+            --text-light: #666666;
+        }
+        html { scroll-behavior: smooth; }
         body {
             font-family: 'Poppins', sans-serif;
             background: linear-gradient(135deg, #F5F2E8 0%, #E8B4CB 100%);
-            color: #2C2C2C;
+            color: var(--text-dark);
             margin: 0;
             min-height: 100vh;
         }
-        .container {
-            max-width: 800px;
+        .navbar {
+            width: 100%;
+            background: rgba(255, 255, 255, 0.95);
+            backdrop-filter: blur(10px);
+            padding: 1rem 0;
+            box-shadow: 0 2px 10px rgba(139, 21, 56, 0.05);
+            position: sticky;
+            top: 0;
+            z-index: 100;
+        }
+        .nav-container {
+            max-width: 1200px;
             margin: 0 auto;
-            padding: 2.5rem 1rem;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 0 2rem;
+        }
+        .logo {
+            font-size: 2rem;
+            font-weight: 700;
+            color: var(--primary-burgundy);
+            text-decoration: none;
+        }
+        .nav-menu {
+            display: flex;
+            list-style: none;
+            gap: 2rem;
+        }
+        .nav-link {
+            text-decoration: none;
+            color: var(--text-dark);
+            font-weight: 500;
+            transition: color 0.3s ease;
+        }
+        .nav-link:hover {
+            color: var(--vibrant-magenta);
+        }
+        .cta-button {
+            background: linear-gradient(135deg, var(--vibrant-magenta), var(--primary-burgundy));
+            color: white;
+            padding: 0.8rem 1.5rem;
+            border: none;
+            border-radius: 50px;
+            font-weight: 700;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            text-decoration: none;
+            box-shadow: 0 4px 15px rgba(196, 30, 58, 0.3);
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
+        }
+        .cta-button:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 8px 25px rgba(196, 30, 58, 0.4);
+            background: linear-gradient(135deg, #d63456, var(--primary-burgundy));
+        }
+        .container {
+            max-width: 900px;
+            margin: 0 auto;
+            padding: 3.5rem 1rem 2.5rem 1rem;
         }
         h1 {
             color: #8B1538;
             text-align: center;
-            font-size: 2.3rem;
+            font-size: 2.6rem;
+            margin-bottom: 2rem;
+            letter-spacing: 1px;
+        }
+        .faq-header-flex {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 1.2rem;
             margin-bottom: 2.5rem;
+        }
+        .faq-header-text {
+            font-size: 1.2rem;
+            color: var(--text-light);
+            text-align: center;
+            flex: 1;
+        }
+        .beetroot-character {
+            flex: 0 0 120px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: 0;
+            animation: bounce 2s ease-in-out infinite;
+        }
+        .beetroot-character svg {
+            width: 90px;
+            height: 110px;
+        }
+        @keyframes bounce {
+            0%, 100% { transform: translateY(0px);}
+            50% { transform: translateY(-10px);}
         }
         .faq-list {
             margin: 0 auto;
@@ -31,10 +127,15 @@
         }
         .faq-item {
             background: #fff;
-            border-radius: 12px;
+            border-radius: 14px;
             margin-bottom: 1.1rem;
             box-shadow: 0 2px 10px #c41e3a14;
             overflow: hidden;
+            transition: box-shadow 0.3s, transform 0.3s;
+        }
+        .faq-item.active {
+            box-shadow: 0 6px 24px #c41e3a22;
+            transform: translateY(-4px) scale(1.01);
         }
         .faq-question {
             cursor: pointer;
@@ -48,9 +149,18 @@
             width: 100%;
             text-align: left;
             transition: background 0.2s;
+            display: flex;
+            align-items: center;
+            gap: 0.7em;
         }
         .faq-question:hover {
             background: #E8B4CB;
+        }
+        .faq-question::before {
+            content: "❓";
+            font-size: 1.2em;
+            margin-right: 0.5em;
+            color: var(--vibrant-magenta);
         }
         .faq-answer {
             display: none;
@@ -59,6 +169,7 @@
             color: #2C2C2C;
             background: #fff;
             border-top: 1px solid #e8b4cb;
+            cursor: pointer;
         }
         .faq-item.active .faq-answer {
             display: block;
@@ -78,16 +189,103 @@
             text-decoration: none;
             font-weight: 600;
             transition: background 0.2s;
+            box-shadow: 0 2px 8px #c41e3a14;
         }
         .back-link:hover {
             background: #c41e3a;
             color: #fff;
         }
+        .faq-note {
+            text-align: center;
+            color: var(--text-light);
+            font-size: 1rem;
+            margin-top: 2.2rem;
+        }
+        /* Social proof notification */
+        .social-proof {
+            position: fixed;
+            bottom: 20px;
+            left: 20px;
+            background: var(--pure-white);
+            border-left: 4px solid var(--vibrant-magenta);
+            padding: 1rem;
+            border-radius: 8px;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+            z-index: 999;
+            transform: translateX(-100%);
+            transition: transform 0.3s ease;
+        }
+        .social-proof.show {
+            transform: translateX(0);
+        }
+        .social-proof-text {
+            font-size: 0.9rem;
+            color: var(--text-dark);
+            margin: 0;
+        }
+        @media (max-width: 600px) {
+            .container {
+                padding: 1.5rem 0.4rem;
+            }
+            h1 {
+                font-size: 2rem;
+            }
+            .faq-question {
+                font-size: 1rem;
+                padding: 1rem 0.7rem;
+            }
+            .faq-answer {
+                font-size: 0.97rem;
+                padding: 0.8rem 0.7rem;
+            }
+            .beetroot-character svg {
+                width: 60px;
+                height: 70px;
+            }
+        }
     </style>
 </head>
 <body>
+    <!-- Navbar -->
+    <nav class="navbar">
+        <div class="nav-container">
+            <a href="index.html" class="logo">BeetBOOST</a>
+            <ul class="nav-menu">
+                <li><a href="index.html#home" class="nav-link">Home</a></li>
+                <li><a href="index.html#products" class="nav-link">Products</a></li>
+                <li><a href="index.html#benefits" class="nav-link">Benefits</a></li>
+                <li><a href="Review.html" class="nav-link">Reviews</a></li>
+                <li><a href="vision.html" class="nav-link">Our Vision</a></li>
+                <li><a href="index.html#contact" class="nav-link">Contact</a></li>
+            </ul>
+            <a href="index.html#order" class="cta-button">Order Now</a>
+        </div>
+    </nav>
+
     <div class="container">
-        <h1>Frequently Asked Questions</h1>
+        <div class="faq-header-flex">
+            <h1>Frequently Asked Questions</h1>
+            <div class="beetroot-character">
+                <!-- SVG: Cute Beetroot Character -->
+                <svg viewBox="0 0 140 170" fill="none" xmlns="http://www.w3.org/2000/svg" aria-label="Cute Beetroot Character">
+                    <ellipse cx="70" cy="100" rx="48" ry="60" fill="#C41E3A" stroke="#8B1538" stroke-width="4"/>
+                    <ellipse cx="70" cy="120" rx="22" ry="18" fill="#fff" opacity="0.15"/>
+                    <path d="M60 122 Q70 130 80 122" stroke="#8B1538" stroke-width="3" fill="none" stroke-linecap="round"/>
+                    <ellipse cx="58" cy="115" rx="4" ry="6" fill="#2C2C2C"/>
+                    <ellipse cx="82" cy="115" rx="4" ry="6" fill="#2C2C2C"/>
+                    <ellipse cx="52" cy="125" rx="4" ry="2" fill="#E8B4CB"/>
+                    <ellipse cx="88" cy="125" rx="4" ry="2" fill="#E8B4CB"/>
+                    <path d="M70 45 Q60 25 80 15 Q90 10 85 30 Q80 50 70 45 Z" fill="#4A7C59" stroke="#38804A" stroke-width="2"/>
+                    <path d="M70 45 Q90 25 110 30 Q120 35 105 50 Q90 65 70 45 Z" fill="#6FCF97" stroke="#38804A" stroke-width="2"/>
+                    <path d="M70 45 Q50 25 30 40 Q20 50 45 60 Q65 70 70 45 Z" fill="#4A7C59" stroke="#38804A" stroke-width="2"/>
+                    <path d="M22 130 Q10 140 30 150" stroke="#8B1538" stroke-width="4" fill="none" stroke-linecap="round"/>
+                    <path d="M118 130 Q130 140 110 150" stroke="#8B1538" stroke-width="4" fill="none" stroke-linecap="round"/>
+                    <ellipse cx="28" cy="152" rx="5" ry="3" fill="#C41E3A"/>
+                    <ellipse cx="112" cy="152" rx="5" ry="3" fill="#C41E3A"/>
+                    <ellipse cx="85" cy="90" rx="9" ry="18" fill="#fff" opacity="0.13"/>
+                </svg>
+            </div>
+        </div>
         <div class="faq-list" id="faqList">
             <div class="faq-item">
                 <button class="faq-question">Is BeetBOOST suitable for vegans?</button>
@@ -130,8 +328,17 @@
                 <div class="faq-answer">You can reach us via the <a href="support.html" style="color:#C41E3A;text-decoration:underline;">Contact Support</a> page.</div>
             </div>
         </div>
+        <div class="faq-note">
+            <em>Click a question to reveal the answer. Click the answer to collapse.</em>
+        </div>
         <a class="back-link" href="index.html">&larr; Back to Home</a>
     </div>
+
+    <!-- Social Proof Notification -->
+    <div class="social-proof" id="socialProof">
+        <p class="social-proof-text">✨ <strong>Mike from Sydney</strong> is browsing our FAQs!</p>
+    </div>
+
     <script>
         // FAQ toggle logic
         document.querySelectorAll('.faq-question').forEach(function(btn) {
@@ -146,6 +353,25 @@
                 ans.parentElement.classList.remove('active');
             });
         });
+
+        // Social proof notifications
+        const socialProofMessages = [
+            "✨ <strong>Mike from Sydney</strong> is browsing our FAQs!",
+            "🎉 <strong>Sarah from Melbourne</strong> just found an answer!",
+            "🌟 <strong>Emma from Perth</strong> is discovering BeetBOOST benefits!",
+            "💚 <strong>David from Brisbane</strong> loves our transparency!"
+        ];
+        function showSocialProof() {
+            const socialProof = document.getElementById('socialProof');
+            const randomMessage = socialProofMessages[Math.floor(Math.random() * socialProofMessages.length)];
+            socialProof.querySelector('.social-proof-text').innerHTML = randomMessage;
+            socialProof.classList.add('show');
+            setTimeout(() => {
+                socialProof.classList.remove('show');
+            }, 4000);
+        }
+        setInterval(showSocialProof, 15000);
+        setTimeout(showSocialProof, 2000);
     </script>
 </body>
 </html>
